--- a/iamroles.yaml
+++ b/iamroles.yaml
@@ -14,6 +14,7 @@ Resources:
               - 'sts:AssumeRole'
       ManagedPolicyArns: 
        - arn:aws:iam::aws:policy/AmazonEC2FullAccess
+       - arn:aws:iam::aws:policy/AWSMarketplaceFullAccess
 
   EC2ReadOnlyRole:
     Type: 'AWS::IAM::Role'
